anim added for contact deets

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,22 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.gradient-anim {
+    background: linear-gradient(270deg, #fbcfe8, #f472b6, #fbcfe8, #f472b6);
+    background-size: 200% 200%;
+    animation: gradient-animation 4s ease infinite;
+  }
+  
+  @keyframes gradient-animation {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
+  }
+  
