--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -22,6 +22,11 @@ body{
     background-size: 200% 200%;
     animation: gradient-animation 8s ease infinite;
 }
+.gradient-anim-4{
+  background: linear-gradient(150deg, rgb(214, 92, 135), #f8adc2, rgb(210, 78, 124), rgb(210, 78, 124));
+  background-size: 200% 200%;
+  animation: gradient-animation 3s ease infinite;
+}
   
   @keyframes gradient-animation {
     0% {
@@ -49,7 +54,7 @@ body{
   
   .image-animation {
     animation: fadeInScale 2.5s ease forwards;
-    animation-delay: 0.3s; /* Optional delay to start the animation */
+    animation-delay: 0.2s; /* Optional delay to start the animation */
   }
   
   
