--- a/frontend/src/Carousel.css
+++ b/frontend/src/Carousel.css
@@ -41,10 +41,14 @@
   border-radius: 5px;
   transition: opacity 0.5s;
 }
+#cr_main{
+  opacity: 1;
+}
 
 .carrossel-item:hover {
   opacity: 1;
 }
+
 
 .carrossel,
 .carrossel-item {
@@ -87,6 +91,28 @@
   transform: rotatey(var(--rotatey)) translatez(var(--tz));
   background: linear-gradient(-229deg, #cf91ff, #5782f5);
 }
+.carrossel-item:nth-child(6) {
+    --rotatey: 0;
+    transform: rotatey(var(--rotatey)) translatez(var(--tz));
+    background: linear-gradient(-229deg, #cf91ff, #5782f5);
+  }
+
+  .carrossel-item:nth-child(7) {
+    --rotatey: 0;
+    transform: rotatey(var(--rotatey)) translatez(var(--tz));
+    background: linear-gradient(-229deg, #cf91ff, #5782f5);
+  }
+
+  .carrossel-item:nth-child(8) {
+    --rotatey: 0;
+    transform: rotatey(var(--rotatey)) translatez(var(--tz));
+    background: linear-gradient(-229deg, #cf91ff, #5782f5);
+  }
+  .carrossel-item:nth-child(9) {
+    --rotatey: 0;
+    transform: rotatey(var(--rotatey)) translatez(var(--tz));
+    background: linear-gradient(-229deg, #cf91ff, #5782f5);
+  }
 
 @media screen and (min-width: 576px) {
   .container-carrossel {
