--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -59,7 +59,7 @@ body{
   
   .image-animation {
     animation: fadeInScale 2.5s ease forwards;
-    animation-delay: 0.2s; /* Optional delay to start the animation */
+    /* animation-delay: 0.2s; Optional delay to start the animation */
   }
   
   
